--- a/index.html
+++ b/index.html
@@ -2472,9 +2472,11 @@
         { q: "15", a: "fifteen" },
         { q: "18", a: "eighteen" },
         { q: "90", a: "ninety" },
-        { q: "100", a: "one hundred" }, // accept hundred
+        { q: "100", a: "hundred" },
         { q: "21", a: "twenty-one" },
-        { q: "11", a: "eleven" }
+        { q: "11", a: "eleven" },
+        { q: "50", a: "fifty" },
+        { q: "70", a: "seventy" }
     ];
 
     // 关卡2：序数词
@@ -2486,7 +2488,9 @@
         { q: "9 (nine)", a: "ninth" },
         { q: "12 (twelve)", a: "twelfth" },
         { q: "20 (twenty)", a: "twentieth" },
-        { q: "31 (thirty-one)", a: "thirty-first" }
+        { q: "31 (thirty-one)", a: "thirty-first" },
+        { q: "8 (eight)", a: "eighth" },
+        { q: "15 (fifteen)", a: "fifteenth" }
     ];
 
     // 关卡3：用法
@@ -2498,7 +2502,9 @@
         { q: "Three ____ (4) of the students are girls.", a: "fourths" },
         { q: "There are ____ (成百上千) of people.", a: "hundreds" },
         { q: "I live on the ____ (12) floor.", a: "twelfth" },
-        { q: "My birthday is on May ____ (9).", a: "ninth" }
+        { q: "My birthday is on May ____ (9).", a: "ninth" },
+        { q: "The bus leaves from Platform ____ (3).", a: "Three" },
+        { q: "About ____ (2/3) of the pizza was eaten.", a: "two thirds" }
     ];
 
     // 终极挑战：选择题（10道） + 填空题（10道）
