--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
         .clock-example {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: center;
             background: #f8f9fa;
             padding: 20px;
@@ -478,8 +478,8 @@
         }
 
         .clock-info {
-            margin-top: 15px;
-            text-align: center;
+            margin-left: 20px;
+            text-align: left;
         }
 
         .clock-info h5 {
